--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=purrfectCatch
 logging.level.org.springframework=DEBUG
 
+server.address=0.0.0.0
 server.port=8080
 server.servlet.context-path=/
 
